# BDBM

./: .env  .gitignore  .gitmodules  Pipfile  automatisation_memoire.py  graph_extractor.sh  init_project.sh  justfile  run_yara.sh  test.sh  text_file3.txt
all_the_things/mutator/: auto_mutation.py  compile_recovered.py  main.py  module_test.py  mutation_generation.py
all_the_things/mutator/lib/: CMakeLists.txt
all_the_things/mutator/lib/src/: debug_hook.hpp  main.cpp  mutator.cpp  mutator.hpp  mutator_wrapper.cpp
binrec/: compile_recovered.py
binrec/rest-api/: __main__.py  app.py  mutate_interface.py
manipulated/: first_created_func.ll
mutator/: auto.py  auto_mutation.py  code_adder.py  mutation_generation.py  recovered_custom_base64.ll  sleeper.py  string_ref.py  string_splitter.py  utils.py  vmdc.c
mutator/adder/: assembler.py  cleanware_adder.py  cleanware_from_recovered.py  code_adder.py  if_adder.py  puts_replace.py  sys_call_llvm.txt
mutator/cleanware/: cleanware1.ll
mutator/escape/: debugenv.py  detect.bc  envvar.py  traced.py  vm.py  vmdetect.py
mutator/helpers/: file_representation.py  ref.py  utils.py
mutator/sleeper/: sleeper.py
mutator/src/: auto_mutation.py  recovered.ll  (+3 more)
programs/: Hello.c  adversarial1  adversarial1.c  base64  cast  cast_ptr.c  debug_test  debug_test.c  detect  execution  execution.c  hella32  hello  hello_var  hello_var.c  humeur  inttostr  inttostr.c  mult_func  mult_func.c  my_ptrace  oskour  pie_test  printer  printer.c  red_pill  red_pill.c  static_link  test  test.c  to_include.c  toy_string  toy_string.c  vmd
(+996 files in other folders)
